compilationTP/y.output
Grammaire

    0 $accept: ee $end

    1 ee: e

    2 e: e PLUS e1
    3  | e MOINS e1
    4  | e1

    5 e1: e1 MULT e2
    6   | e1 DIV e2
    7   | e2

    8 e2: ENTIER
    9   | PO e PF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
PLUS (258) 2
MOINS (259) 3
MULT (260) 5
DIV (261) 6
ENTIER (262) 8
PO (263) 9
PF (264) 9


Non-terminaux, suivis des règles où ils apparaissent

$accept (10)
    à gauche: 0
ee (11)
    à gauche: 1, à droite: 0
e (12)
    à gauche: 2 3 4, à droite: 1 2 3 9
e1 (13)
    à gauche: 5 6 7, à droite: 2 3 4 5 6
e2 (14)
    à gauche: 8 9, à droite: 5 6 7


État 0

    0 $accept: . ee $end

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    ee  aller à l'état 3
    e   aller à l'état 4
    e1  aller à l'état 5
    e2  aller à l'état 6


État 1

    8 e2: ENTIER .

    $défaut  réduction par utilisation de la règle 8 (e2)


État 2

    9 e2: PO . e PF

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    e   aller à l'état 7
    e1  aller à l'état 5
    e2  aller à l'état 6


État 3

    0 $accept: ee . $end

    $end  décalage et aller à l'état 8


État 4

    1 ee: e .
    2 e: e . PLUS e1
    3  | e . MOINS e1

    PLUS   décalage et aller à l'état 9
    MOINS  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 1 (ee)


État 5

    4 e: e1 .
    5 e1: e1 . MULT e2
    6   | e1 . DIV e2

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 4 (e)


État 6

    7 e1: e2 .

    $défaut  réduction par utilisation de la règle 7 (e1)


État 7

    2 e: e . PLUS e1
    3  | e . MOINS e1
    9 e2: PO e . PF

    PLUS   décalage et aller à l'état 9
    MOINS  décalage et aller à l'état 10
    PF     décalage et aller à l'état 13


État 8

    0 $accept: ee $end .

    $défaut  accepter


État 9

    2 e: e PLUS . e1

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    e1  aller à l'état 14
    e2  aller à l'état 6


État 10

    3 e: e MOINS . e1

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    e1  aller à l'état 15
    e2  aller à l'état 6


État 11

    5 e1: e1 MULT . e2

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    e2  aller à l'état 16


État 12

    6 e1: e1 DIV . e2

    ENTIER  décalage et aller à l'état 1
    PO      décalage et aller à l'état 2

    e2  aller à l'état 17


État 13

    9 e2: PO e PF .

    $défaut  réduction par utilisation de la règle 9 (e2)


État 14

    2 e: e PLUS e1 .
    5 e1: e1 . MULT e2
    6   | e1 . DIV e2

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 2 (e)


État 15

    3 e: e MOINS e1 .
    5 e1: e1 . MULT e2
    6   | e1 . DIV e2

    MULT  décalage et aller à l'état 11
    DIV   décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (e)


État 16

    5 e1: e1 MULT e2 .

    $défaut  réduction par utilisation de la règle 5 (e1)


État 17

    6 e1: e1 DIV e2 .

    $défaut  réduction par utilisation de la règle 6 (e1)
